--- a/app-store-monitor/css/styles.css
+++ b/app-store-monitor/css/styles.css
@@ -4,6 +4,8 @@ custom-app {
   box-sizing: border-box;
 }
 
+/* monitor columns */
+
 #hud {
   display: flex;
   flex-direction: row;
@@ -18,21 +20,41 @@ custom-app {
   flex-direction: column;
   flex-basis: 100%;
   flex: 1;
-
-  /* width: 50%; */
-  /* text-align: right; */
 }
 
-#hud > table {
-  width: 100%;
+#hud app-store-table {
+  flex: 0.6;
+}
+#hud event-log-table {
+  flex: 0.4;
 }
 
-.truncate {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  /* Adjust the width as needed */
-  /* max-width: 200px; */
-  /* display: inline-block; */
-  vertical-align: top;
+/* monitor table properties */
+
+@keyframes flash-anim {
+  from {
+    background-color: rgba(0, 255, 0, 0.5);
+  }
+  to {
+    background-color: transparent;
+  }
+}
+
+#hud {
+  table {
+    max-width: 100%;
+    font-size: 1.2vw;
+  }
+  th,
+  td {
+    padding: calc(var(--pico-spacing) / 4) calc(var(--pico-spacing) / 6);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    background-color: transparent;
+    color: inherit;
+  }
+  .flash {
+    animation: flash-anim 1s infinite;
+  }
 }
