--- a/app-store-monitor/css/styles.css
+++ b/app-store-monitor/css/styles.css
@@ -11,9 +11,12 @@ h4 {
   border-radius: 6px;
   margin-bottom: 2vw;
 }
-h4 {
-  padding: 1rem;
-  font-size: 1.5vw;
+article > label {
+  background-color: var(--pico-progress-background-color);
+  padding: 0.5rem 1rem;
+  text-align: center;
+  border-radius: 5px;
+  font-weight: bold;
 }
 
 /* monitor columns */
@@ -45,7 +48,7 @@ app-store-table-row {
   display: table-row;
 }
 
-/* monitor table properties */
+/* table row animations */
 
 @keyframes flash-anim {
   0% {
@@ -82,6 +85,8 @@ app-store-table-row {
     transform: scale(1);
   }
 }
+
+/* table styles */
 
 #hud {
   table {
@@ -127,13 +132,15 @@ footer {
   width: 100%;
 }
 
+/* responsive table layout */
+
 @media screen and (max-width: 959px) {
   #hud {
     flex-direction: column;
     gap: 0;
   }
 
-  h4 {
+  article > label {
     font-size: 2vw;
   }
 
@@ -141,4 +148,20 @@ footer {
     max-width: 100%;
     font-size: 2vw;
   }
+}
+
+/* special table elements */
+
+/* pico input override w/ :not */
+event-log-table input:not([type="checkbox"], [type="radio"], [type="range"]) {
+  font-size: 0.7rem;
+  padding: 0.5rem;
+  height: 2rem;
+}
+
+/* pico responsive override - always keep 2 columns */
+event-log-table .grid.filters {
+  grid-template-columns: repeat(auto-fit, minmax(0%, 1fr));
+  font-size: 12px !important;
+  align-items: end;
 }
