--- a/shared/css/styles.css
+++ b/shared/css/styles.css
@@ -18,6 +18,7 @@ header {
   text-align: center;
 
   img {
+    width: 100%;
     max-width: 400px;
     height: auto;
     mix-blend-mode: screen;
